--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
+body {
+  margin: 0 auto;
+  background-color: black;
+  color: white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100vh;
+}
+
+.navbar {
+  width: 200px;
+  background-color: black;
   color: white;
+  position: fixed;
+  right: 0;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-top: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list li {
+  margin: 10px 0;
+}
+
+.nav-link {
+  color: white;
+  text-decoration: none;
+  padding: 10px 20px;
+  transition: color 0.3s;
+}
+
+.nav-link.active {
+  color: purple;
+  font-size: initial;
+  font-weight: 700;
+}
+
+.work-samples-links {
+  display: flex;
+}
+
+.work-samples-link {
+  color: yellow !important;
+  text-decoration: none !important;
+  margin-right: 10px; 
+}
+
+.work-samples-link:last-child {
+  margin-right: 0; 
+}
+
+.work-samples-link:hover {
+  text-decoration: none !important;
 }
